--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ output {
     margin-top: 1.5em;
     margin-left: 2em;
     margin-right: 2em;
-    margin-bottom: 5%;
+    margin-bottom: 1.5em;
     clear: left;
 }
 .left-float img {
